fix(tech): spacing, scaling

--- a/pages/main/main.scss
+++ b/pages/main/main.scss
@@ -400,7 +400,7 @@ hr {
     margin-bottom: 2em;
     filter: drop-shadow(2px 4px 6px black);
 }
-#projectsImgHover-1, #projectsImgHover-2, #projectsImgHover-3 {
+#projectsImgHover-1, #projectsImgHover-2, #projectsImgHover-3, #projectsImgHover-4 {
     transition: opacity .4s linear;
     width: max-content;
     max-width: 75%;
@@ -445,29 +445,36 @@ hr {
     flex-flow: column;
     text-shadow: $primary-text-shadow;
 }
-react, sass, jest, gsap, git {position: relative; left: -3.5em; transition: opacity .25s linear; width: 10px; font-size: 1.5rem; -webkit-text-stroke: medium;}
-socketio2, express2, react2, sass2, git2 {position: relative; left: -3.8em; transition: opacity .25s linear; width: 10px; font-size: 1.5rem; -webkit-text-stroke: medium;}
-react3, ts3, css3, git3 {position: relative; left: -3.8em; transition: opacity .25s linear; width: 10px; font-size: 1.5rem; -webkit-text-stroke: medium;}
+.techContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 10px;
+}
+react, sass, jest, gsap, socketio2, express2, react2, sass2, react3, ts3, css3, react4, ts4, tailwind4, motion4 { 
+    position: absolute;
+    transition: opacity 0.3s ease-in-out;
+    font-size: 1.5rem;
+    -webkit-text-stroke: medium;
+}
 
-.react, .react2, .react3 {transform: scale(1.3); -ms-transform: scale(1.3); -webkit-transform: scale(1.3);}
-.jest {transform: scale(1.2); -ms-transform: scale(1.2); -webkit-transform: scale(1.2);}
-.git, .git2, .git3 {transform: scale(1.5); -ms-transform: scale(1.5); -webkit-transform: scale(1.5);}
+.react, .react2, .react3, .react4, .jest {transform: scale(1.3); -ms-transform: scale(1.3); -webkit-transform: scale(1.3);}
 // .node2 {transform: scale(0.8); -ms-transform: scale(0.8); -webkit-transform: scale(0.8);}
 .express2 {transform: scale(1.5); -ms-transform: scale(1.5); -webkit-transform: scale(1.5); filter: brightness(0.2);}
-.css3 {transform: scale(0.65); -ms-transform: scale(0.65); -webkit-transform: scale(0.65);}
-.ts3 {transform: scale(1.4); -ms-transform: scale(1.4); -webkit-transform: scale(1.4);}
-.tech {z-index: 2;transition: opacity .25s linear; max-width: 92px; min-width: 40px; margin: 0 0.5em;}
-react, react2, react3 {color: #55c6e4; left: -4.2em;}
-react2 { left: -3.8em;}
+.css3 {transform: scale(0.85); -ms-transform: scale(0.85); -webkit-transform: scale(0.85);}
+.ts3, .ts4 {transform: scale(1.4); -ms-transform: scale(1.4); -webkit-transform: scale(1.4);}
+.tech {z-index: 2; transition: opacity 0.3s ease-in-out; max-width: 92px; min-width: 40px; max-height: 92px; margin: 0 0.5em; padding-top: 5px;}
+react, react2, react3, react4 {color: #55c6e4;}
 sass, sass2 {color: #ce679a}
-jest {color: #8c3f4d; left: -3em}
+jest {color: #8c3f4d; }
 gsap {color: #93d400}
-git, git2, git3 {color: #df4b33; left: -2.8em;}
 // node2 {color: #89bd5e; left: -4em}
-express2 { color: #7d7d7d; left: -4.5em;}
-socketio2 {color: #fff; left: -4.4em}
-css3 {color: #00c9ff; left: -3.8em}
-ts3 {color: #3179c7; left: -5em}
+express2 { color: #7d7d7d;}
+socketio2 {color: #fff;}
+css3 { color:#62c0d8 }
+ts3,ts4 {color: #3179c7;}
+tailwind4 {color: #15c2b7;}
+motion4 {color: #fff32e; }
 .projectTechDivContainer {@extend %flex; flex-flow: row;}
 
 .projectLinkContainer {
@@ -756,16 +763,15 @@ ts3 {color: #3179c7; left: -5em}
     #skillsImg {transform: scale(0.5); -ms-transform: scale(0.5); -webkit-transform: scale(0.5);}
     #projects-svg {top: -5em;}
     .projectImg {transform: scale(0.5); -ms-transform: scale(0.5); -webkit-transform: scale(0.5);}
-    #projectsImgHover-1, #projectsImgHover-2, #projectsImgHover-3 {width: 80%;}
+    #projectsImgHover-1, #projectsImgHover-2, #projectsImgHover-3, #projectsImgHover-4 {width: 80%;}
     .projectImgContainer {margin: 1em 0; width: 100%; height: 190px; padding: 1em;}
     #about, .projectDescription {font-size: 1.1rem; line-height: 1.5em;}
     .projectDetails { width: 100%; margin: 0;}
     .projectTechContainer {transform: scale(0.9); -ms-transform: scale(0.9); -webkit-transform: scale(0.9);}
     .projectDetails, .projectDescriptionContainer, .projectTechContainer {min-inline-size: -webkit-fill-available; min-inline-size: -moz-fill-available;}
     .tech {margin: 0;}
-    react, sass, gsap, git {font-size: 1.5rem; left: -2.8em; -webkit-text-stroke: thin;}
-    react {left: -3.5em;}
-    socketio2, react2, sass2, express2, git2 {font-size: 1.2rem; left: -3.5em; -webkit-text-stroke: thin;}
+    react, sass, gsap {font-size: 1.5rem; -webkit-text-stroke: thin;}
+    socketio2, react2, sass2, express2 {font-size: 1.2rem; -webkit-text-stroke: thin;}
     .projectLinkContainer {margin: 2em 0 0; align-items: center;}
     #contactPage {scroll-margin-top: 18em;}
     #contactInfo {padding: 0.5em 0; font-size: 11px;}
